v0.2.4 (05/27/2023) :
    - Removed usage of the 64 available RAM bytes between zeropage and stack shadow memory (apparently mapped)
    - Added support for NMI interrupts

v0.2.3 (05/22/2023) :
    - Added ramchip memory usage information
    - Now uses the 64 available RAM bytes between zeropage and stack shadow memory 

v0.2.2 (05/15/2023) :
    - Added RAM left information (with verbose option)
    - Slightly modified DASM error output
    - Corrected bug for cart info location for supergames
    - Added verbose output for memory mapping
    - Modified generated header so that we can compile without prosystem.h
    - Corrected bug with scattered data layout
    
v0.2.1 (05/01/2023) :
    - Added generation of debug files (.lst, .sym) 

v0.2.0 (04/24/2023) :
    - Added a78 header and runs DAMS automatically now
    - Added _ms_paldetected & multisprite_get_tv to produce code independant of PAL and NTSC
    - moved all the code to 224 lines for PAL and NTSC

v0.1.2 (04/17/2023) :
    - Added multisprite example (examples/example_multisprite.c)
    - Added multisprite support through multisprite.h header

v0.1.1 :
    - Enhanced Holey DMA management
    - Added bankswitching and RAM on cart support
    - Corrected memory mapping

v0.1.0 (4/4/2023) :
    - First release