@@ -1,0 +1,12 @@
+/*
+    string.h: A common header for the Atari 7800
+    Copyleft 2023 Bruno STEUX 
+
+    This file is distributed as a companion file to cc7800 - a subset of C compiler for the Atari 7800
+*/
+
+#ifndef __STRING_H__
+#define __STRING_H__
+
+#endif // __STRING_H__
+
