@@ -1,4 +1,5 @@
 v0.2.4 (05/27/2023) :
+    - Added implementation of itoa in stdlib.h header
     - Removed usage of the 64 available RAM bytes between zeropage and stack shadow memory (apparently mapped)
     - Added support for NMI interrupts
 
